--- a/new_file.css
+++ b/new_file.css
@@ -173,7 +173,7 @@ header nav ul li a:hover{
     width: 100%;
     height: 570px;
     position: relative;
-    background: url(C:\Users\Safi\Desktop\Site\images\Resto3_03.gif) no-repeat;     
+    background: url(img/Resto3_03.gif) no-repeat;     
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -249,7 +249,7 @@ header nav ul li a:hover{
     display: inline-block;
     margin: 0;
     padding: 20px 25px 35px 25px;
-    background: url('../img/ribbon.svg') no-repeat;
+    background: url(img/Resto3_06.gif) no-repeat;
     background-position: 50% 0;
 
     color: #fff;
